--- a/index.html
+++ b/index.html
@@ -3,28 +3,302 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mera Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ali ALtaf Khan</title>
+    <!-- Google Fonts for professional look -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    
+    <style>
+        /* --- General Styling --- */
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            background-color: #f0f2f5;
+            color: #333;
+        }
+        .container {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+        h1, h2, h3 {
+            color: #1d2d50;
+        }
+        a {
+            color: #133b5c;
+            text-decoration: none;
+        }
+
+        /* --- Header & Navigation --- */
+        .header {
+            background-color: #fff;
+            padding: 15px 0;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .logo {
+            font-weight: 700;
+            font-size: 1.5em;
+            color: #1d2d50;
+        }
+        .nav-links a {
+            margin-left: 25px;
+            font-weight: 600;
+            transition: color 0.3s;
+        }
+        .nav-links a:hover {
+            color: #fca311;
+        }
+
+        /* --- Hero Section --- */
+        .hero {
+            background: #1d2d50;
+            color: white;
+            padding: 80px 0;
+            text-align: center;
+        }
+        .hero h1 {
+            font-size: 3em;
+            margin: 0;
+            color: white;
+        }
+        .hero p {
+            font-size: 1.2em;
+            margin-top: 10px;
+            color: #e5e5e5;
+        }
+
+        /* --- Projects Section --- */
+        #projects {
+            padding: 60px 0;
+        }
+        .section-title {
+            text-align: center;
+            font-size: 2.5em;
+            margin-bottom: 50px;
+        }
+        .project-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 30px;
+        }
+        .project-card {
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            overflow: hidden;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+        .project-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 15px 25px rgba(0,0,0,0.15);
+        }
+        .project-image {
+            width: 100%;
+            height: 200px;
+            object-fit: cover; /* Ensures image covers the area nicely */
+        }
+        .project-info {
+            padding: 25px;
+        }
+        .project-info h3 {
+            margin-top: 0;
+        }
+        .project-tags {
+            margin: 15px 0;
+        }
+        .tag {
+            background-color: #e7e7e7;
+            color: #333;
+            padding: 5px 12px;
+            border-radius: 15px;
+            font-size: 12px;
+            margin-right: 5px;
+            display: inline-block;
+            margin-bottom: 5px;
+        }
+        .project-links {
+            margin-top: 20px;
+        }
+        .btn {
+            background-color: #1d2d50;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-weight: 600;
+            transition: background-color 0.3s;
+            margin-right: 10px;
+        }
+        .btn:hover {
+            background-color: #133b5c;
+        }
+        .btn-secondary {
+            background-color: #e5e5e5;
+            color: #333;
+        }
+        .btn-secondary:hover {
+            background-color: #dcdcdc;
+        }
+
+        /* --- Footer --- */
+        .footer {
+            background: #1d2d50;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Mera Naam</h1>
-        <p>Professional Laravel & WordPress Developer</p>
+
+    <!-- Header Section -->
+    <header class="header">
+        <div class="container navbar">
+            <div class="logo">Ali Altaf Khan</div>
+            <nav class="nav-links">
+                <a href="#projects">Projects</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+        </div>
     </header>
 
-    <section id="projects">
-        <h2>Mere Projects</h2>
-        <div class="project">
-            <h3>Project 1: E-commerce Website</h3>
-            <p>Yeh project Laravel istemal karke banaya gaya tha...</p>
-            <a href="#">View Project</a>
-        </div>
-        <div class="project">
-            <h3>Project 2: Custom WordPress Plugin</h3>
-            <p>Is project mein main ne ek custom booking plugin banaya...</p>
-            <a href="#">View Project</a>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h1>Professional Laravel, React, JS & WordPress Developer</h1>
+            <p>Full-stack web developer with a passion for software architecture and programming best practices. Over the last 9 years, I have developed and maintained complex Web apps using mainly Laravel and Vue. I love writing clean code and talking and writing about it .</p>
         </div>
     </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="container">
+            <h2 class="section-title">Mere Projects</h2>
+            <div class="project-container">
+
+                <!-- APNA PROJECT 1 YAHAN ADD KAREIN -->
+                <div class="project-card">
+                    <!-- Apne project ka screenshot 'images/project1.png' par rakhein -->
+                    <img src="images/1.png" alt="Project 1 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+1';">
+                    <div class="project-info">
+                        <h3>Full Fledge Construction Management System </h3>
+                        <div class="project-tags">
+                            <span class="tag">Laravel</span>
+                            <span class="tag">PHP</span>
+                            <span class="tag">React.js</span>
+                            <span class="tag">MySQL</span>
+                            <span class="tag">Bootstrap</span>
+                        </div>
+                        <p>I made a full fledge management system for a UK based Construction Company.</p>
+                        <div class="project-links">
+                            <!-- Apne project ka live link yahan dein -->
+                            <a href="http://3.27.169.230/" class="btn" target="_blank">Live Demo</a>
+                            <!-- Apne project ka GitHub link yahan dein -->
+                            <a href="#" class="btn btn-secondary" target="_blank">View Code</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- APNA PROJECT 2 YAHAN ADD KAREIN -->
+                <div class="project-card">
+                    <img src="images/2.jpeg" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
+                    <div class="project-info">
+                        <h3>Online WooCommerce Store</h3>
+                        <div class="project-tags">
+                            <span class="tag">WordPress</span>
+                            <span class="tag">PHP</span>
+                            <span class="tag">JavaScript</span>
+                        </div>
+                        <p>I integrate RMH (Retail management hero) inventory with woo commerce store which I created for client on WordPress. All inventory including images products name, SKU, Product categories and prices are fetching from Retail Management Hero through API integration and all the orders are integrated and synchronised in woo commerce and RMH.</p>
+                        <div class="project-links">
+                            <a href="https://www.linkedin.com/in/ali-altaf-khan-1b217820b/details/projects/" class="btn" target="_blank">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+
+               <div class="project-card">
+                    <img src="images/project3.png" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
+                    <div class="project-info">
+                        <h3>Custom WordPress Website</h3>
+                        <div class="project-tags">
+                            <span class="tag">WordPress</span>
+                            <span class="tag">PHP</span>
+                            <span class="tag">JavaScript</span>
+                        </div>
+                        <p>I made a custome blog website for a construction company on wordpress.</p>
+                        <div class="project-links">
+                            <a href="https://faizaconstructionsltd.com/" class="btn" target="_blank">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                               <div class="project-card">
+                    <img src="images/4.png" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
+                    <div class="project-info">
+                        <h3>Custom WordPress Website</h3>
+                        <div class="project-tags">
+                            <span class="tag">WordPress</span>
+                            <span class="tag">PHP</span>
+                            <span class="tag">JavaScript</span>
+                        </div>
+                        <p>I made a custome blog website for a projexes on wordpress.</p>
+                        <div class="project-links">
+                            <a href="https://projexes.co.uk/" class="btn" target="_blank">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                             <div class="project-card">
+                    <img src="images/project2.png" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
+                    <div class="project-info">
+                        <h3>Custom WordPress Website</h3>
+                        <div class="project-tags">
+                            <span class="tag">WordPress</span>
+                            <span class="tag">PHP</span>
+                            <span class="tag">JavaScript</span>
+                        </div>
+                        <p>I made a custome blog website for a projexes on wordpress.</p>
+                        <div class="project-links">
+                            <a href="https://projexes.co.uk/" class="btn" target="_blank">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                             <div class="project-card">
+                    <img src="images/5.png" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
+                    <div class="project-info">
+                        <h3>Full-Stack SAAS Application</h3>
+                        <div class="project-tags">
+                            <span class="tag">Next.js, React, Tailwind CSS</span>
+                            <span class="tag">Node.js, Serverless Functions</span>
+                            <span class="tag">PostgreSQL, MongoDB, or other modern database solutions</span>
+                        </div>
+                        <p>This project is a full-stack SaaS application built with a focus on performance, scalability, and user experience. Leveraging the power of a modern Jamstack architecture, the application is deployed on Vercel, ensuring a fast and reliable experience for users worldwide.
+
+The front-end is likely built with a modern JavaScript framework like React (via Next.js), allowing for a dynamic and interactive user interface. The back-end functionalities are probably handled by serverless functions, and it may integrate with various third-party APIs to provide a rich feature set. This project demonstrates proficiency in building and deploying modern web applications, with a focus on industry best practices and a seamless user experience.</p>
+                        <div class="project-links">
+                            <a href="https://saas-app-two-delta.vercel.app/" class="btn" target="_blank">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 Ali Nawab. All Rights Reserved.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
