Updated portfolio with professional design

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <!-- Projects Section -->
     <section id="projects">
         <div class="container">
-            <h2 class="section-title">Mere Projects</h2>
+            <h2 class="section-title">My Projects</h2>
             <div class="project-container">
 
                 <!-- APNA PROJECT 1 YAHAN ADD KAREIN -->
@@ -211,7 +211,7 @@
 
                 <!-- APNA PROJECT 2 YAHAN ADD KAREIN -->
                 <div class="project-card">
-                    <img src="images/2.jpeg" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
+                    <img src="images/2.jpg" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
                     <div class="project-info">
                         <h3>Online WooCommerce Store</h3>
                         <div class="project-tags">
@@ -256,21 +256,7 @@
                         </div>
                     </div>
                 </div>
-                             <div class="project-card">
-                    <img src="images/project2.png" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
-                    <div class="project-info">
-                        <h3>Custom WordPress Website</h3>
-                        <div class="project-tags">
-                            <span class="tag">WordPress</span>
-                            <span class="tag">PHP</span>
-                            <span class="tag">JavaScript</span>
-                        </div>
-                        <p>I made a custome blog website for a projexes on wordpress.</p>
-                        <div class="project-links">
-                            <a href="https://projexes.co.uk/" class="btn" target="_blank">Live Demo</a>
-                        </div>
-                    </div>
-                </div>
+                             
                              <div class="project-card">
                     <img src="images/5.png" alt="Project 2 Screenshot" class="project-image" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1d2d50/f0f2f5?text=Project+2';">
                     <div class="project-info">
